# doggo

./: .gitignore  .pre-commit-config.yaml  AppImageBuilder.yml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/actions/bootstrap-poetry/: action.yaml
.github/workflows/: build.yml  ci.yaml  ci.yml  release.yaml  release.yml
scripts/: build.py  create-appimage.sh  create-dmg.sh  rename-release-file.sh
src/doggo/: __init__.py  __main__.py  body.py  brain.py  config.py  control.py  dna.py  dog.py  landscape.py  logger.py  mind.py  prepare.py  ui.py  world.py
src/doggo/assets/dogs/: LICENSE
src/doggo/dog/: __init__.py  body.py  brain.py  dog.py
src_assets/: ground.aseprite
tests/: conftest.py  test_body.py  test_brain.py  test_doggo.py  test_landscape.py  test_prepare.py  test_ui.py  test_world.py
tests/dog/: test_body.py  test_brain.py  test_dog.py
